# python_package_template

./: .gitignore  README.md  requirements.txt  setup.cfg
package/: __main__.py
