# More info here https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = python_package_template
version = 0.0.1
url='https://github.com/mshumko/python_package_template'
author='Mykhaylo Shumko'
author_email='msshumko@gmail.com'
long_description = file: README.md
license = GNU GENERAL PUBLIC LICENSE

[options]
packages = find:
install_requires = 
    numpy
    matplotlib
    pandas>=1.0.0
python_requires = >= "3.0"
